# Internal_Support_Copilot_Chatbot

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REPO_CLEANUP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
docs/: ACTIONS.md  ARCHITECTURE.md  AUTHORIZATION.md  DEPLOYMENT.md  LOGGING.md  OBSERVABILITY.md  PERSISTENCE.md  ROUTING.md  RUNBOOK.md  SECURITY.md  TROUBLESHOOTING.md  data_model.md  kg_schema.md  use_cases.md
eval/: README.md  banking_fraud_queries.jsonl  enterprise_support_queries.jsonl  evaluate_domain.py  evaluate_enterprise_support.py
scripts/: check_github_actions_client.py  dev.py  download.py  evaluate_answer_quality.py  evaluate_retrieval.py  ingest_data.py  ingest_domain.py  ingest_enterprise_support_data.py  prepare_data.py  train_risk_model.py  validate_domain_data.py  validate_enterprise_support_data.py
src/: __init__.py  pipeline.py
tests/: conftest.py  test_agent_actions.py  test_agent_tools.py  test_answer_quality_benchmark.py  test_api_actions.py  test_api_chat_actions.py  test_api_health.py  test_auth.py  test_banking_fraud_domain.py  test_chat_actions.py  test_customer_risk_scoring.py  test_domain_adapters.py  test_enterprise_agentic_retrieval.py  test_enterprise_hybrid_retrieval.py  test_enterprise_support_api.py  test_enterprise_support_data_validation.py  test_enterprise_support_documents.py  test_enterprise_support_eval_gate.py  test_enterprise_support_kg.py  test_enterprise_support_loader.py  (+13 more)
(+136 files in other folders)
